implement stock reserve and structure modification